remove * css to prevent squishing on Desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   background-color: #333;
   /* Dark background color for the entire page */
